# Webserv

./: .clang-format  .gitignore  BindingSocket.cpp  BindingSocket.hpp  CMakeLists.txt  Caddyfile  ConnectingSocket.cpp  ConnectingSocket.hpp  ListeningSocket.cpp  ListeningSocket.hpp  Makefile  Server.cpp  Socket.cpp  Socket.hpp  WebServ  Webserv.hpp  ex00  info.html  main.cpp  webserv.conf  webserv.msegrans.conf
42test/: index.html  test.conf
42test/YoupiBanane/: youpi.bla
WWW/: info.html
cgi-bin/: test.js  test.py
errorPages/: 400.html  403.html  404.html  405.html  413.html  500.html
includes/: Request.hpp  Response.hpp  Route.hpp  Routes.hpp  Server.hpp  Socket.hpp  cgi.hpp  colours.hpp  constants.hpp  header.hpp  parser.hpp  parser_utils.hpp
src/: Header.cpp  Request.cpp  Response.cpp  Route.cpp  Routes.cpp  Server.cpp  Socket.cpp  main.cpp
src/cgi/: cgi.cpp
src/parser/: parser.cpp  utils.cpp
test/: test.html
www/: info.html  old.html
www/files/: index.html  test.py
